<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">芸茗茶叶</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="sure_text">确    定</string>
    <string name="save_text">保存</string>
    <string name="cancel_text">取消</string>
    <string name="collect_success">收藏成功</string>
    <string name="edit_btn">编辑</string>
    <string name="comment_ok">发表</string>
    <string name="comment_from_who">来自　</string>
    <string name="tab_item_home">首页</string>
    <string name="tab_item_mall">商城</string>
    <string name="tab_item_scancode">扫码</string>
    <string name="tab_item_mine">我的</string>
    <string name="tab_item_more">更多</string>
    <string name="logout_btn">退出登录</string>
    <string name="login_account_hint">手机号/用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册</string>
    <string name="register_get_authcode">获取验证码</string>
    <string name="register_your_number">您的手机号:</string>
    <string name="register_hint">我们已将验证短信发送给您，请将短信中的六位数字填写在下方。</string>
    <string name="register_hint_authcode">请输入验证码</string>
    <string name="register_next">下一步</string>
    <string name="register_register_text">注    册</string>
    <string name="register_phone_passed">您的手机号已通过验 ，请填写昵称和密码方便快捷登录。</string>
    <string name="register_hint_name">请输入用户名，2－10个字</string>
    <string name="register_hint_password">请输入密码，6－16个字</string>
    <string name="register_hint_sure_password">请确认密码</string>
    <string name="register_save_text">保存</string>
    <string name="register_skit_text">跳    过</string>
    <string name="register_perfect_text">用户完善资料</string>
    <string name="register_perfect_hint_1">如果您现在不想填，也可以点＂返回＂直接进入首页</string>
    <string name="register_real_name">真实姓名</string>
    <string name="register_sex">性别</string>
    <string name="man_text">男</string>
    <string name="woman_text">女</string>
    <string name="register_age">年龄</string>
    <string name="register_complete">完成注册</string>
    <string name="register_perfect_hint_0">完善个人资料更容易获得交流：）</string>
    <string name="register_where">所在地</string>
    <string name="modify_password_title">密码修改</string>
    <string name="new_arrival_title">新品上市</string>
    <string name="top_sellers_title">热销排行</string>
    <string name="tea_info_title">茶业资讯</string>
    <string name="tea_info_detail_title">资讯详情</string>
    <string name="tea_info_comment_title">资讯评论</string>
    <string name="contact_store_title">联系门店</string>
    <string name="contact_store_customer_title">门店客服</string>
    <string name="contact_store_customer_detail_title">客服详情</string>
    <string name="contact_store_customer_detail_age">年龄:</string>
    <string name="contact_store_customer_detail_phone">手机:</string>
    <string name="contact_store_customer_detail_store_name">门店:</string>
    <string name="contact_store_customer_pic_title">相片浏览</string>
    <string name="contact_store_map_title">联系门店</string>
    <string name="product_category_title">产品分类</string>
    <string name="product_detail">商品详情</string>
    <string name="comment_detail">评论详情</string>
    <string name="product_choose_package">选择包装</string>
    <string name="product_info">商品信息</string>
    <string name="product_select_package">包装方式</string>
    <string name="product_comment_title">商品评论</string>
    <string name="product_attribute_title">商品信息</string>
    <string name="product_package_title">选择包装</string>
    <string name="product_package_weight">重量</string>
    <string name="product_package_packing">包装</string>
    <string name="mine_add_shopping_cart">加入购物车</string>
    <string name="more_about">关于芸茗</string>
    <string name="more_setting">设置</string>
    <string name="more_feedback">意见反馈</string>
    <string name="more_recommend">推荐给好友</string>
    <string name="more_check_update">检查更新</string>
    <string name="more_feedback_title">意见反馈</string>
    <string name="more_feedback_summary">　　欢迎您提出宝贵的意见和建议，这将有助于改进我们的产品。</string>
    <string name="more_feedback_send">提交</string>
    <string name="mine_grade">等级：</string>
    <string name="mine_total_point">积分：</string>
    <string name="mine_orders">订单记录</string>
    <string name="mine_favorite">收藏夹</string>
    <string name="mine_shopping_cart">购物车</string>
    <string name="mine_shopping_cart_commit">提交</string>
    <string name="mine_shopping_cart_price">会员价:</string>
    <string name="mine_push_notification">推送消息</string>
    <string name="mine_credit">积分兑换</string>
    <string name="mine_shopping_cart_title">购物车</string>
    <string name="mine_orders_list_title">订单记录</string>
    <string name="mine_orders_tab_new_order">新的订单</string>
    <string name="mine_orders_tab_old_order">历史订单</string>
    <string name="mine_orders_item_product_count">数量：</string>
    <string name="mine_orders_item_product_total_price">总价：</string>
    <string name="mine_orders_item_order_serial_number">订单编号：</string>
    <string name="mine_orders_detail_title">订单详情</string>
    <string name="mine_orders_detail_product_info">　商品信息</string>
    <string name="mine_orders_detail_item_price">价格　</string>
    <string name="mine_orders_detail_item_product_count">数量　</string>
    <string name="mine_orders_detail_order_info">　订单信息</string>
    <string name="mine_orders_detail_order_info_customer">指定客服　　</string>
    <string name="mine_orders_detail_order_info_time">下单时间　　</string>
    <string name="mine_orders_detail_order_info_serial_number">订单编号　　</string>
    <string name="mine_collection_title">收藏夹</string>
    <string name="mine_collection_tab_news">收藏的新闻</string>
    <string name="mine_collection_tab_product">收藏的商品</string>
    <string name="mine_user_detail_title">编辑</string>
    <string name="mine_user_detail_name">姓名</string>
    <string name="mine_user_detail_phone_number">手机</string>
    <string name="mine_user_detail_job">职务</string>
    <string name="mine_user_detail_reset_password">密码修改</string>
    <string name="scan_code_start">开始扫码</string>
    <string name="choose_cs_title">选择为您服务的客服专员...</string>
    <string name="choose_cs_auto">自动分配</string>
    <string name="choose_cs_next">下一步</string>
    <string name="choose_cs_others">选择客服</string>
    <string name="confirm_order_title">确认订单</string>
    <string name="commit_order_success_title">订单提交</string>
    <string name="commit_order_success_call">拨打电话</string>
    <string name="commit_order_success_view_order">查看订单</string>
    <string name="commit_order_success_summary1">您的订单已经提交</string>
    <string name="commit_order_success_summary2">请耐心等待，工作人员将会尽快与您联系确认</string>
    <string name="commit_order_success_summary_auto_customer">如果您有任何疑问，或需要其他服务，请拨打一下联系电话</string>
    <string name="commit_order_success_summary_choose_customer">如果您有任何疑问，或需要其他服务，请联系您的客服专员</string>
    <string name="search_do_search">搜索</string>
    <string name="search_clear_history">清除历史记录</string>
    <string name="search_product_hint">输入产品关键字</string>
    <string name="search_news_hint">输入新闻关键字</string>
    <string name="search_user_hint">输入用户关键字</string>
    <string name="mall_order_by">排序</string>
    <string name="mall_sort">筛选</string>
    <string name="more_about_detail_1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;芸茗即为深刻理解茶之本源，追求茶之自然香味的专业好茶；它蕴涵禅意，芸芸众生齐品茗，共享平和盛世！</string>
    <string name="more_about_detail_2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;芸茗茶叶成立于1999年，最初作为原料供应商服务于诸多大型茶叶公司和厦门60%三星级以上酒店和大型餐饮酒楼，激烈的上游竞争奠定了我们坚实的品质基础。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;2001年我们在厦门黄金商业地段开了芸茗首家门店；2005年我们借助首届闽南斗茶铁观音茶王得主的东风，在北京天坛公园附近投入运营了近两千平米的芸茗茶文化会所；2008年大红袍的荣誉让我们确立了“传承闽茶”的经验思路。芸茗茶叶是唯一的闽南斗茶“四冠王”得主，2012年我们更是荣膺两岸消费者最喜爱的“十大茶叶品牌”。芸茗茶叶的产品揽括铁观音、大红袍、红茶三大闽茶系列，我们坚持传统正味，提倡低碳环保，率先实行包材百搭、着力打造低调质朴的茶叶消费理念。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;福建省茶叶协会詹会长曾经提出“茶为国饮，闽茶为优”的豪迈口号，我们芸茗将致力打造”闽茶世家“的终极目标。</string>
    <string name="sure_add">确认添加</string>
    <string name="price_text">价格</string>
    <string name="old_price_text">原价:</string>
    <string name="buy_text"> 购买</string>
    <string name="specification_text">规格</string>
    <string name="drop_dowm">下拉刷新</string>
    <string name="release_update">松开刷新</string>
    <string name="loading">正在加载。。。</string>
    <string name="seen_more">点击获取更多</string>

    <item name="tag_first" type="id"/>
    <item name="tag_second" type="id"/>

    <string name="submit">提交</string>
    <string name="title_activity_update_dialog">UpdateDialogActivity</string>
    <string name="action_settings">Settings</string>

</resources>