<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color" >

    <FrameLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            style = "@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"/>
    </FrameLayout>

    <EditText
        android:id="@+id/account_edit"
        style="@style/edit_round_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/login_account_hint"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/password_edit"
        style="@style/edit_round_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_edit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/login_password_hint"
        android:password="true"
        android:singleLine="true"
        android:text=""
        android:maxLength="23" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edit"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/register_button"
            style="@style/reg_login_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/register_btn"
            android:background="@drawable/gray_btn_selector" />

        <Button
            android:id="@+id/login_button"
            style="@style/reg_login_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/login_btn"
            android:background="@drawable/green_btn_selector" />
    </LinearLayout>

    <Button
        android:id="@+id/forget_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget_selector" />

</RelativeLayout>